[package]
name = "unit"
version = "0.1.0"
edition = "2021"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
description = "Manage unit of measure + decimal type"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["i64"]
i32 = []
i64 = []
i128 = []
isize = []

[dependencies]
implicit-clone = { version = "0.4.1", optional = true }
